update events sections

--- a/index.html
+++ b/index.html
@@ -243,6 +243,76 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal21" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/arduino-day-2017-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Arduino Day 2017</h4>
+                        <p class="text-muted">Presentations and Projects</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal20" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/xmas-party-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>XMAS Party</h4>
+                        <p class="text-muted">Christmas + New Year Party!</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal19" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/blockchain-hmm-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Blockchain<sup>2</sup></h4>
+                        <p class="text-muted">Blockchain, hmmm...</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal18" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/poster-design-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Poster Design for Beginners</h4>
+                        <p class="text-muted">Academy Workshop</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal17" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/birthday-x2-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Birthday Party v.2</h4>
+                        <p class="text-muted">Celebrating two (She)Sharp years</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal16" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -1072,6 +1142,237 @@
         </div>
     </div> -->
     <!-- USED -->
+    <div class="portfolio-modal modal fade" id="portfolioModal21" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Arduino Day 2017</h2>
+
+                            <p class="item-intro text-muted">
+                             Arduino Day 2017 by SheSharp is up and running!<p>
+                            <p class="item-intro text-muted">Are you itching to present on hardware matters and Arduino?<br>
+                            Do you want to showcase your favourite project?<br>
+                            Or just want to attend and learn?
+                            </p>
+
+                            <p class="item-intro text-muted">
+                              Then sign up and join us at OK!Thess on April 1st (no joke) with your laptop and Arduino!
+                            </p>
+
+                            <p class="item-intro text-muted" style="text-align:left">
+                                Remember:
+                                <ul class="item-intro text-muted" style="text-align:left">
+                                    <li>Sign up!</li>
+                                    <li>Call for Speaker deadline: 22/3</li>
+                                    <li>Call for Project deadline: 29/3
+</li>
+                                    <li>BYD (Bring your device)</li>
+                                    <li>Spread the word <3</li>
+                                </ul>
+                            </p>
+                            <p class="item-intro text-muted" style="text-align:left">
+                                 Sign up forms - choose your role:                                <ul class="item-intro text-muted" style="text-align:left">
+                                    <li><a href="https://goo.gl/forms/ZgZEmAQCbc3rfSFu2">Presenter</a></li>
+                                    <li><a href="https://goo.gl/forms/zImCeQNFc78szB2B2">Project owner</a></li>
+                                    <li><a href="https://goo.gl/forms/zImCeQNFc78szB2B2">Attendee</a></li>
+
+                                </ul>
+                            </p>
+                            <p class="item-intro text-muted" style="text-align:left">
+                                 Notes:
+                                                                <ul class="item-intro text-muted" style="text-align:left">
+                                    <li>You can register both as a presenter and project owner</li>
+                                    <li>You can register multiple projects</li>
+                                    <li>If you register as a presenter or project owner you don't need an attendee sign up</li>
+
+                                </ul>
+                            </p>
+                            <p class="item-intro text-muted">
+                              See you there!</p>
+
+
+                            <p class="item-intro text-muted">
+                              Facebook event <a href="https://www.facebook.com/events/1315467221825146/" target="_blank">here</a>!
+                            </p>                            
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: April 1<sup>st</sup> 2017 </li>
+                                <li><strong>Time</strong>: 12:00</li>
+                                <li><strong>Place</strong>: <a href="https://goo.gl/maps/tUhsgSFfr1M2" target="_blank">OK!Thess</a></li>
+                            </ul>                        
+                            <img class="img-responsive img-centered" src="img/events/arduino-day-2017-poster.png" alt="SheSharp x SKGTech XMAS Party poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal20" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>SheSharp x SKGTech XMAS Party</h2>
+
+                            <p class="item-intro text-muted">
+                             …and now for something completely different: Christmas + New Year Party!<p>
+                            <p class="item-intro text-muted">Αυτή την Παρασκευή 30 Δεκεμβρίου, μία μέρα πριν το τέλος του όλο και σατανικότερου 2016, σας περιμένουμε σε μία γιορτινή μάζωξη στο Bord de l'eau!
+                            </p>
+
+                            <p class="item-intro text-muted">
+                              Φυσικά, από ένα γιορτινό πάρτυ δεν θα μπορούσαν να λείπουν τα δώρα. Αυτή την φορά με ένα geek twist: αλγοριθμική ανταλλαγή δώρων! 
+                            </p>
+                            <p class="item-intro text-muted">
+                              Όποιος θέλει να συμμετάσχει στην ανταλλαγή δώρων μπορεί να το κάνει χωρίς να νοιάζεται για το αν θα φέρουν οι άλλοι - ο αλγόριθμος μας μπορεί να διαχειριστεί κάθε περίπτωση ανεξαρτήτως αριθμού δωρο-εχόντων!</p>
+                            <p class="item-intro text-muted">
+                              Facebook event <a href="https://www.facebook.com/events/1241097412639803/" target="_blank">here</a>!
+                            </p>                            
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: December 30<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 20:30</li>
+                                <li><strong>Place</strong>: <a href="https://goo.gl/maps/5YGETKV21wn" target="_blank">Bord de l'eau</a></li>
+                            </ul>                        
+                            <img class="img-responsive img-centered" src="img/events/xmas-party-poster.png" alt="SheSharp x SKGTech XMAS Party poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal19" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Women Go Digital:</h2>
+                            <h2>Blockchain, hmmm</h2>
+
+                            <p class="item-intro text-muted">
+                              We were invited by the IEEE Women in Engineering DUTh Student Branch to talk about blockchain and conduct a live demo.
+                            </p>
+
+                            <p class="item-intro text-muted">                              
+                              Facebook event <a href="https://www.facebook.com/events/375325439483732/" target="_blank">here</a>!
+                            </p>                            
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: December 9<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 12:30</li>
+                                <li><strong>Place</strong>: <a href="https://goo.gl/maps/DzKZPRwyA3T2" target="_blank">ΗΜΜΥ ΔΠΘ</a></li>
+                            </ul>
+                            <img class="img-responsive img-centered" src="img/events/blockchain-hmmm-poster.png" alt="Blockhacin Hmmm Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal18" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Academy Workshop:</h2>
+                            <h2>Poster Design</h2>
+
+                            <p class="item-intro text-muted">
+                              Our team was invited to give a talk about making posters and promoting events at the Academy Workshop of InfinityGreece.
+                            </p>
+
+                            <p class="item-intro text-muted">                              
+                              Facebook event <a href="https://www.facebook.com/events/658730707620999/" target="_blank">here</a>!
+                            </p>                            
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: November 13<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 16:30</li>
+                                <li><strong>Place</strong>: <a href="https://goo.gl/maps/AHifRnED5F22" target="_blank">Δημαρχειακό Μέγαρο Θεσσαλονίκης</a></li>
+                            </ul>
+                            <img class="img-responsive img-centered" src="img/events/poster-design-poster.png" alt="Editathon Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal17" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Birthday Party v.2</h2>
+
+                            <p class="item-intro text-muted">
+                              Exactly 730 days ago the SheSharp community was created! These 2 years have been <strong>awesome</strong>!<p>
+                            <p class="item-intro text-muted">We have organized many events and workshops, most of them with 50%+ women participants. We have learned a lot, and we hope you have learned even more about technology, science, and diversity!
+                            </p>
+
+                            <p class="item-intro text-muted">
+                              Come and celebrate with us these two years of talking and learning in Bord de l'eau on Saturday!</p>
+                            <p class="item-intro text-muted">
+                              Facebook event <a href="https://www.facebook.com/events/325794857783499/" target="_blank">here</a>!
+                            </p>                            
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: October 22<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 21:00</li>
+                                <li><strong>Place</strong>: <a href="https://goo.gl/maps/RXFQbmtYquq" target="_blank">Bord de l'eau</a></li>
+                            </ul>
+                            <p class="item-intro text-muted">P.S. Yes, of course, there will be gifts!</p>
+                            
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="portfolio-modal modal fade" id="portfolioModal16" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
