tidy up first sections of html and add more info on the Present section of our Mission

--- a/index.html
+++ b/index.html
@@ -31,13 +31,6 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <!-- Google analytics code -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -74,9 +67,6 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#mission">Mission</a>
                     </li>
@@ -106,7 +96,6 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in"><img src="./img/logo-motto.png" /></div> -->
                 <div class="intro-lead-in">Welcome to the SheSharp Greece Website.</div>
                 <div class="intro-heading">#include women</div>
                 <a href="#mission" class="page-scroll btn btn-xl">More Info <i class="fa fa-angle-double-down"></i></a>
@@ -114,53 +103,15 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <!-- <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About us</h2>
-                    <h3 class="section-subheading text-muted">A greek community of people dedicated to promote women's engagement with technology & science. Its main activities consist of free workshops, meetups open to anyone interested, as well as partnerships with other tech communities & local chapters of Thessaloniki. Our objectives include cultivating a positive culture of mutual respect, facilitating knowledge transfer, and building a local community of people with the same interests and passion.
-
-</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-            </div>
-        </div>
-    </section>-->
-
     <!-- Mission Section -->
     <section id="mission">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Our mission</h2>
-            <p class="generic-paragraph">A greek community of people dedicated to promote women's engagement with technology & science. Its main activities consist of free workshops, meetups open to anyone interested, as well as partnerships with other tech communities and local chapters of Thessaloniki.</p>
+            <p class="generic-paragraph">
+                A greek community of people dedicated to promote women's engagement with technology &amp; science. Its main activities consist of free workshops, meetups open to anyone interested, as well as partnerships with other tech communities and local chapters of Thessaloniki.
+            </p>
           </div>
         </div>
         <div class="row">
@@ -176,7 +127,9 @@
                     <h4 class="subheading">Past</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We first met at a conference considering women and technology where most of us were volunteers. While discussing this issue with the rest of the attendees, we felt it was our obligation to raise awareness about it, get together and do something. That was when SheSharp was born. </p>
+                    <p class="text-muted">
+                        We first met at a conference considering women and technology where most of us were volunteers. While discussing this issue with the rest of the attendees, we felt it was our obligation to raise awareness about it, get together and do something. That was when SheSharp was born. 
+                    </p>
                   </div>
                 </div>
               </li>
@@ -190,7 +143,12 @@
                     <h4 class="subheading">Present</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Currently, our core team consists of almost twenty members, coming from various different backgrounds. We are all interested in promoting equality and knowledge transfer, as well as cultivating a positive culture of mutual respect, through free seminars and workshops open to anyone interested.</p>
+                    <p class="text-muted">
+                        Currently, our core team consists of almost twenty members, coming from various different backgrounds. We are all interested in promoting equality and knowledge transfer, as well as cultivating a positive culture of mutual respect. Our favourite part of the day is when we work and create stuff together, as a team. 
+                    </p><br/>
+                    <p class="text-muted">
+                        The main actions we currently take include free seminars and workshops open to anyone interested as well as some projects we mainly develop inside the team. Moreover, we support and collaborate with many other communities. This way we hope to practically display and boost the existence of females in technology. 
+                    </p>
                   </div>
                 </div>
               </li>
@@ -204,7 +162,9 @@
                     <h4 class="subheading">Future</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"> As the tech industry is growing, the need to fix the gender gap becomes more vital. We, as a team, hope to inspire girls to get more involved with technology and science. More and more events and workshops are going to be organised! Stay tuned...</p>
+                    <p class="text-muted"> 
+                        As the tech industry is growing, the need to fix the gender gap becomes more vital. We, as a team, hope to inspire girls to get more involved with technology and science. More and more amazing things are going to be organised! Stay tuned...
+                    </p>
                   </div>
                 </div>
               </li>
@@ -957,77 +917,8 @@
         </div>
       -->
       </div>
-
-          </div>
-            <!-- <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
-            </div> -->
-        </div>
-
-        <br /><br /><br /><br /><br />
-        <!-- Special Thanks Section -->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Special Thanks</h2>
-                    <h3 class="section-subheading text-muted">There are some people that helped us a lot and in many different ways and we would like to thank them for their support. </h3>
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-4">
-                  <div class="team-member">
-                      <img src="img/special-thanks/kakiousis1.jpg" class="img-responsive img-circle" alt="">
-                      <h4><a href="http://www.kakiousis.gr/" target="_blank">Kakiousis Printings</a></h4>
-                      <p class="text-muted">Special thanks to Kakiousis Printings for the exquisite work regarding our prints, which he courteously provided us for free!</p>
-                      <ul class="list-inline social-buttons">
-                          <li><a href="https://twitter.com/InfoKakiousis" target="_blank"><i class="fa fa-twitter"></i></a>
-                          </li>
-                          <li><a href="https://www.facebook.com/kakiousisdigitalprintings" target="_blank"><i class="fa fa-facebook"></i></a>
-                          </li>
-                          <!-- <li><a href="http://gr.linkedin.com/in/argirisparaskevas" target="_blank"><i class="fa fa-linkedin"></i></a>
-                          </li> -->
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="team-member">
-                <img src="img/special-thanks/kasta1.jpg" class="img-responsive img-circle" alt="">
-                <h4>Katerina Stamou</h4>
-                <p class="text-muted">Katerina has been mentoring us for the last few months. She is always trying to guide us and give her great advice on many things and we are lucky to have met her. Finally, we would like to thank her for believing in us and supporting us earnestly.</p>
-                <ul class="list-inline social-buttons">
-                  <!--<li><a href="https://twitter.com/username" target="_blank"><i class="fa fa-twitter"></i></a>
-                  </li>-->
-                  <!--<li><a href="https://www.facebook.com/username" target="_blank"><i class="fa fa-facebook"></i></a>
-                  </li>-->
-                  <li><a href="https://uk.linkedin.com/in/katerina-stamou-608233a1" target="_blank"><i class="fa fa-linkedin"></i></a>
-                  </li>
-                  <!--<li><a href="https://github.com/username" target="_blank"><i class="fa fa-github"></i></a>
-                  </li>-->
-                </ul>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="team-member">
-                <img src="img/special-thanks/geoah1.jpg" class="img-responsive img-circle" alt="">
-                <h4>George Antoniadis</h4>
-                <p class="text-muted">Geoah is a professional web developer who has helped us with both his advice and knowledge on the web. We would like to thank him for his support and guidance, specifically on the web development series workshops.</p>
-                <ul class="list-inline social-buttons">
-                  <li><a href="https://twitter.com/geoah" target="_blank"><i class="fa fa-twitter"></i></a>
-                  </li>
-                  <li><a href="https://www.facebook.com/george.antoniadis" target="_blank"><i class="fa fa-facebook"></i></a>
-                  </li>
-                  <li><a href="https://gr.linkedin.com/in/geoah" target="_blank"><i class="fa fa-linkedin"></i></a>
-                  </li>
-                  <li><a href="https://github.com/geoah" target="_blank"><i class="fa fa-github"></i></a>
-                  </li>
-                </ul>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-4">
+      <div class="row">
+        <div class="col-sm-4">
                 <div class="team-member">
                 <img src="img/special-thanks/liakos1.jpg" class="img-responsive img-circle" alt="">
                 <h4>Konstantinos Liakos</h4>
@@ -1044,23 +935,16 @@
                 </ul>
                 </div>
               </div>
-                    <div class="col-sm-4">
-                  <div class="team-member">
-                      <img src="img/special-thanks/georgia1.jpg" class="img-responsive img-circle" alt="">
-                      <h4>Georgia Tsiamanta</h4>
-                      <p class="text-muted">Georgia was the first person outside the team that helped us through our very beginning. She is "feeding" us with information we find very useful and we would like to thank her for all the support. </p>
-                      <ul class="list-inline social-buttons">
-                          <li><a href="https://twitter.com/GTmanta" target="_blank"><i class="fa fa-twitter"></i></a>
-                          </li>
-                          <li><a href="https://www.facebook.com/georgia.t.mantas" target="_blank"><i class="fa fa-facebook"></i></a>
-                          </li>
-                          <li><a href="http://gr.linkedin.com/in/gtsiamanta" target="_blank"><i class="fa fa-linkedin"></i></a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
+      </div>
+          </div>
+            <!-- <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
-    </section>
+            </div> -->
+        </div>
+
+        <br /><br /><br /><br /><br />
 
     <!-- Clients Aside -->
     <aside class="clients">
